Changes in 2.0.3:
  o Build Changes:
    * PGP version 3 keys are now supported for verification of
      package signatures. According to RFC4880, version 3 keys are
      deprecated. (CNY-2420)
    * Superclasses are now loaded from the filesystem. Superclasses
      can now be cooked. Doing so will make a changeset that installs
      the recipe itself on the filesystem. (CNY-983)
    * When building packages, Conary now reads /etc/ld.so.conf.d/*.conf
      files to determine whether to include the path in the dependency.
      (CNY-2433)
    * The /etc/ld.so.conf.d/*.conf handling added to Conary 1.2.13
      introduced a bug that could erase necessary entries from
      ld.so.conf in some circumstances.  This bug has been
      resolved. (CNY-2440)
    * Spaces in URLs are now automatically escaped. (CNY-2389)
    * The Requires() policy now inspects Lib: and Lib.private:
      pkg-config keywords in .pc files to find library files, and
      where it finds them, it adds appropriate Conary trove
      requirements to the .pc files. (CNY-2370)

  o Client Changes:
    * The implementation of the util.mkdirChain function has been
      changed to no longer use exceptions internally to signal that the
      directory already exists. Raising exceptions is a relatively
      expensive operation that slows down the data store. Exceptions are
      still used internally in the very infrequent case of intermediate
      directories not existing. (CNY-2405)
    * Conary will not downgrade packages if no version is specified by
      the user, but, due to an out of date mirror or other reasons, the
      update available for a package is older than the currently
      installed package. (CNY-2402)
    * Conary now recognizes /etc/ld.so.conf.d/*.conf files, adding an
      include line to /etc/ld.so.conf if they exist, and does not add
      new duplicate entries to /etc/ld.so.conf for directories already
      specified in /etc/ld.so.conf.d/*.conf files. (CNY-2432)